grammar.js
    source_file: $ => seq(
      repeat($._newline),
      optional($.module_header),
      repeat($.attribute_statement),
      optional($.module_options),
      optional($.module_body),
    ),

    module_body: $ => repeat1(
      choice(
        $.sub_declaration,
        $.function_declaration,
        $.property_get_declaration,
        $.property_set_declaration,
        $.property_let_declaration,
        $.declare_declaration,
        $.type_declaration,
        $.enum_declaration,
        $.event_declaration,
        $.const_declaration,
        $.dim_statement,
        $.deftype_declaration,
        $.implements_declaration,
        $.compiler_directive,
        $.statement,
        $._newline,
      )
    ),

    // ── Visibility ──
    sub_declaration: $ => seq(
      optional($.visibility),
      optional(kw('Static')),
      kw('Sub'),
      field('name', $._ambiguous_identifier),
      optional(field('parameters', $.parameter_list)),
      $._terminator,
      optional(field('body', $.block)),
      kw('End'), kw('Sub'),
      $._terminator,
    ),

    parameter_list: $ => seq('(', commaSep($.parameter), ')'),

    type_expression: $ => choice(
      kw('Boolean'), kw('Byte'),    kw('Integer'), kw('Long'),
      kw('Single'),  kw('Double'),  kw('Currency'), kw('Date'),
      kw('String'),  kw('Object'),  kw('Variant'),  kw('Any'),
      seq(kw('String'), '*', choice($.integer_literal, $.identifier)),
      $._ambiguous_identifier,
    ),

    block: $ => repeat1(choice($.statement, $._newline)),

    statement: $ => choice(
      $.assignment_statement,
      $.let_statement,
      $.set_statement,
      $.call_statement,
      $.dim_statement,
      $.redim_statement,
      $.const_statement,
      $.if_statement,
      $.select_case_statement,
      $.for_next_statement,
      $.for_each_statement,
      $.while_statement,
      $.do_loop_statement,
      $.with_statement,
      $.goto_statement,
      $.gosub_statement,
      $.return_statement,
      $.on_error_statement,
      $.on_error_resume_next_statement,
      $.on_goto_statement,
      $.on_gosub_statement,
      $.resume_statement,
      $.exit_statement,
      $.label_statement,
      $.raise_event_statement,
      $.mid_statement,
      $.lset_statement,
      $.rset_statement,
      $.open_statement,
      $.close_statement,
      $.print_statement,
      $.write_statement,
      $.input_statement,
      $.line_input_statement,
      $.get_statement,
      $.put_statement,
      $.seek_statement,
      $.beep_statement,
      $.stop_statement,
      $.end_statement,
      $.kill_statement,
      $.name_statement,
      $.chdir_statement,
      $.chdrive_statement,
      $.mkdir_statement,
      $.rmdir_statement,
      $.filecopy_statement,
      $.date_statement,
      $.time_statement,
      $.load_statement,
      $.unload_statement,
      $.randomize_statement,
      $.erase_statement,
      $.lock_statement,
      $.unlock_statement,
      $.send_keys_statement,
      $.app_activate_statement,
      $.save_setting_statement,
      $.delete_setting_statement,
      $.error_statement,
      $.reset_statement,
      $.option_statement,
    ),

    subscripts: $ => commaSep1($.subscript),
    subscript: $ => seq(
      optional(seq($.expression, kw('To'))),
      $.expression,
    ),

    // ── Full expression hierarchy ──
    expression: $ => choice(
      $.literal,
      $.new_expression,
      $.typeof_is_expression,
      $.addressof_expression,
      $.parenthesized_expression,
      $.unary_expression,
      $.binary_expression,
      $.member_access_expression,
      $.with_member_access_expression,
      $.index_expression,
      $.call_expression,
      $.file_number_expression,
      $._ambiguous_identifier,
    ),

    // File number expression: #n — used as argument to Input(), LOF(), etc.
    file_number_expression: $ => prec(11, seq('#', $.expression)),

    // Dot-prefix member access used inside With blocks: .Property or .Method(args)
    with_member_access_expression: $ => prec.left(10, seq(
      '.',
      field('name', $._ambiguous_identifier),
    )),

    new_expression: $ => seq(
      kw('New'),
      field('type', $._ambiguous_identifier),
    ),

    unary_expression: $ => prec(8, seq(
      field('operator', choice(kw('Not'), '-', '+')),
      field('operand', $.expression),
    )),

    binary_expression: $ => {
      const table = [
        [7,  '^'],
        [6,  choice('*', '/', '\\', kw('Mod'))],
        [5,  choice('+', '-')],
        [4,  '&'],
        [3,  choice('=', '<>', '<', '>', '<=', '>=', kw('Is'), kw('Like'))],
        [2,  kw('And')],
        [1,  choice(kw('Or'), kw('Xor'))],
        [0,  choice(kw('Eqv'), kw('Imp'))],
      ];
      return choice(...table.map(([precedence, op]) =>
        prec.left(precedence, seq(
          field('left', $.expression),
          field('operator', op),
          field('right', $.expression),
        ))
      ));
    },

    index_expression: $ => prec(9, seq(
      field('object', $.expression),
      '(',
      seq($.argument, repeat(seq(',', optional($.argument)))),
      ')',
    )),

    argument: $ => choice(
      // Named argument: foo := expr  (keyword can be a reserved word used as name)
      prec(1, seq(field('keyword', $._ambiguous_identifier), ':=', optional(field('value', $.expression)))),
      // Positional with modifier: ByVal expr or ByRef expr
      seq(choice(kw('ByVal'), kw('ByRef')), field('value', $.expression)),
      // Plain expression
      field('value', $.expression),
    ),

    _left_hand_side: $ => choice(
      $.member_access_expression,
      $.with_member_access_expression,
      $.index_expression,
      $._ambiguous_identifier,
    ),

    // ── Assignment and Set statements ──
    assignment_statement: $ => seq(
      field('target', $._left_hand_side),
      '=',
      field('value', $.expression),
      $._terminator,
    ),

    set_statement: $ => seq(
      kw('Set'),
      field('target', $._left_hand_side),
      '=',
      field('value', $.expression),
      $._terminator,
    ),

    let_statement: $ => seq(
      kw('Let'),
      field('target', $._left_hand_side),
      '=',
      field('value', $.expression),
      $._terminator,
    ),

    call_statement: $ => choice(
      seq(kw('Call'), field('call', $.expression), $._terminator),
      seq(
        field('call', choice($.member_access_expression, $._ambiguous_identifier)),
        optional(field('arguments', $.argument_list_no_parens)),
        $._terminator,
      ),
    ),

    argument_list_no_parens: $ => seq(
      $.argument,
      repeat(seq(',', optional($.argument))),
    ),

    const_statement: $ => seq(
      kw('Const'),
      commaSep1($.const_declarator),
      $._terminator,
    ),

    redim_statement: $ => seq(
      kw('ReDim'),
      optional(kw('Preserve')),
      commaSep1($.redim_declarator),
      $._terminator,
    ),

    redim_declarator: $ => seq(
      field('name', $._ambiguous_identifier),
      optional($.type_hint),
      '(',
      field('dimensions', $.subscripts),
      ')',
      optional(seq(kw('As'), field('type', $.type_expression))),
    ),

    exit_statement: $ => seq(
      kw('Exit'),
      choice(kw('Sub'), kw('Function'), kw('Property'), kw('For'), kw('Do')),
      $._terminator,
    ),

    erase_statement: $ => seq(
      kw('Erase'),
      commaSep1(field('array', $._ambiguous_identifier)),
      $._terminator,
    ),

    randomize_statement: $ => seq(
      kw('Randomize'),
      optional(field('seed', $.expression)),
      $._terminator,
    ),

    if_statement: $ => choice(
      $.inline_if_statement,
      $.block_if_statement,
    ),

    inline_if_statement: $ => prec(2, seq(
      kw('If'),
      field('condition', $.expression),
      kw('Then'),
      field('consequence', $.inline_statement),
      optional(seq(kw('Else'), field('alternative', $.inline_statement))),
      $._terminator,
    )),

    // inline_statement: no $._terminator (the inline_if_statement provides it)
    inline_statement: $ => choice(
      seq(kw('GoTo'), field('label', $._ambiguous_identifier)),
      seq(kw('GoSub'), field('label', $._ambiguous_identifier)),
      seq(kw('Return')),
      seq(kw('Exit'), choice(kw('Sub'), kw('Function'), kw('Property'), kw('For'), kw('Do'))),
      seq(kw('Resume'), optional(choice(kw('Next'), $._ambiguous_identifier))),
      seq(kw('Stop')),
      seq(kw('Beep')),
      seq(kw('End')),
      seq(kw('Set'), field('target', $._left_hand_side), '=', field('value', $.expression)),
      seq(kw('Let'), field('target', $._left_hand_side), '=', field('value', $.expression)),
      seq(field('target', $._left_hand_side), '=', field('value', $.expression)),
      seq(kw('Call'), $.expression),
      seq($.member_access_expression, optional($.argument_list_no_parens)),
      seq($._ambiguous_identifier, optional($.argument_list_no_parens)),
    ),

    block_if_statement: $ => seq(
      kw('If'),
      field('condition', $.expression),
      kw('Then'),
      $._terminator,
      field('consequence', optional($.block)),
      repeat($.elseif_clause),
      optional($.else_clause),
      kw('End'), kw('If'),
      $._terminator,
    ),

    elseif_clause: $ => seq(
      choice(kw('ElseIf'), seq(kw('Else'), kw('If'))),
      field('condition', $.expression),
      kw('Then'),
      $._terminator,
      field('body', optional($.block)),
    ),

    else_clause: $ => seq(
      kw('Else'),
      $._terminator,
      field('body', optional($.block)),
    ),

    // ── Select Case statement (Task 9) ──
    select_case_statement: $ => seq(
      kw('Select'), kw('Case'),
      field('value', $.expression),
      $._terminator,
      repeat(choice($.case_clause, $.case_else_clause)),
      kw('End'), kw('Select'),
      $._terminator,
    ),

    case_clause: $ => seq(
      kw('Case'),
      commaSep1($.case_condition),
      $._terminator,
      field('body', optional($.block)),
    ),

    case_else_clause: $ => seq(
      kw('Case'), kw('Else'),
      $._terminator,
      field('body', optional($.block)),
    ),

    case_condition: $ => choice(
      seq(kw('Is'), choice('=', '<>', '<', '>', '<=', '>='), $.expression),
      seq($.expression, kw('To'), $.expression),
      $.expression,
    ),

    // ── For Next statement (Task 9) ──
    for_next_statement: $ => seq(
      kw('For'),
      field('variable', $._ambiguous_identifier),
      optional($.type_hint),
      '=',
      field('from', $.expression),
      kw('To'),
      field('to', $.expression),
      optional(seq(kw('Step'), field('step', $.expression))),
      $._terminator,
      field('body', optional($.block)),
      kw('Next'),
      optional(field('next_variable', $._ambiguous_identifier)),
      $._terminator,
    ),

    // ── For Each statement (Task 9) ──
    for_each_statement: $ => seq(
      kw('For'), kw('Each'),
      field('variable', $._ambiguous_identifier),
      optional($.type_hint),
      kw('In'),
      field('collection', $.expression),
      $._terminator,
      field('body', optional($.block)),
      kw('Next'),
      optional(field('next_variable', $._ambiguous_identifier)),
      $._terminator,
    ),

    // ── While Wend statement (Task 9) ──
    while_statement: $ => seq(
      kw('While'),
      field('condition', $.expression),
      $._terminator,
      field('body', optional($.block)),
      kw('Wend'),
      $._terminator,
    ),

    // ── Do Loop statement (Task 9) ──
    do_loop_statement: $ => choice(
      seq(kw('Do'), $._terminator, field('body', optional($.block)), kw('Loop'), $._terminator),
      seq(kw('Do'), choice(kw('While'), kw('Until')), field('condition', $.expression), $._terminator, field('body', optional($.block)), kw('Loop'), $._terminator),
      seq(kw('Do'), $._terminator, field('body', optional($.block)), kw('Loop'), choice(kw('While'), kw('Until')), field('condition', $.expression), $._terminator),
    ),

    // ── With statement (Task 9) ──
    with_statement: $ => seq(
      kw('With'),
      field('object', $.expression),
      $._terminator,
      field('body', optional($.block)),
      kw('End'), kw('With'),
      $._terminator,
    ),
    goto_statement: $ => seq(kw('GoTo'), field('label', $._ambiguous_identifier), $._terminator),
    gosub_statement: $ => seq(kw('GoSub'), field('label', $._ambiguous_identifier), $._terminator),
    return_statement: $ => seq(kw('Return'), $._terminator),
    on_error_statement: $ => choice(
      seq(kw('On'), kw('Error'), kw('GoTo'), field('label', $._ambiguous_identifier), $._terminator),
      $.on_error_resume_next_statement,
      seq(kw('On'), kw('Error'), kw('GoTo'), '0', $._terminator),
    ),

    on_error_resume_next_statement: $ => seq(
      kw('On'), kw('Error'), kw('Resume'), kw('Next'),
      $._terminator,
    ),
    on_goto_statement: $ => seq(kw('On'), $.expression, kw('GoTo'), commaSep1($._ambiguous_identifier), $._terminator),
    resume_statement: $ => seq(kw('Resume'), optional(choice(kw('Next'), $._ambiguous_identifier)), $._terminator),
    label_statement: $ => seq(field('name', $._ambiguous_identifier), ':', $._terminator),
    mid_statement: $ => prec(2, seq(kw('Mid'), '(', $.expression, ',', $.expression, optional(seq(',', $.expression)), ')', '=', $.expression, $._terminator)),
    lset_statement: $ => seq(kw('LSet'), field('target', $._left_hand_side), '=', field('value', $.expression), $._terminator),
    rset_statement: $ => seq(kw('RSet'), field('target', $._left_hand_side), '=', field('value', $.expression), $._terminator),
    open_statement: $ => prec(2, seq(kw('Open'), $.expression, kw('For'), choice(kw('Append'), kw('Binary'), kw('Input'), kw('Output'), kw('Random')), optional(seq(kw('Access'), choice(kw('Read'), kw('Write'), seq(kw('Read'), kw('Write'))))), optional(choice(kw('Shared'), seq(kw('Lock'), choice(kw('Read'), kw('Write'), seq(kw('Read'), kw('Write')))))), kw('As'), '#', field('file_number', $.expression), optional(seq(kw('Len'), '=', field('record_length', $.expression))), $._terminator)),
    close_statement: $ => prec(2, seq(kw('Close'), optional(commaSep1(seq('#', $.expression))), $._terminator)),
    print_statement: $ => seq(kw('Print'), optional(seq('#', $.expression, ',')), optional($.output_list), $._terminator),
    write_statement: $ => seq(kw('Write'), '#', $.expression, ',', optional($.output_list), $._terminator),
    input_statement: $ => prec(2, seq(kw('Input'), '#', $.expression, repeat1(seq(',', field('variable', $._ambiguous_identifier))), $._terminator)),
    line_input_statement: $ => seq(kw('Line'), kw('Input'), '#', $.expression, ',', field('variable', $._ambiguous_identifier), $._terminator),
    get_statement: $ => seq(kw('Get'), '#', $.expression, ',', optional($.expression), ',', field('variable', $.expression), $._terminator),
    put_statement: $ => seq(kw('Put'), '#', $.expression, ',', optional($.expression), ',', field('data', $.expression), $._terminator),
    seek_statement: $ => seq(kw('Seek'), '#', $.expression, ',', field('position', $.expression), $._terminator),
    beep_statement: $ => seq(kw('Beep'), $._terminator),
    stop_statement: $ => seq(kw('Stop'), $._terminator),
    end_statement: $ => seq(kw('End'), $._terminator),
    kill_statement: $ => seq(kw('Kill'), field('path', $.expression), $._terminator),
    name_statement: $ => prec(2, seq(kw('Name'), field('old_path', $.expression), kw('As'), field('new_path', $.expression), $._terminator)),
    chdir_statement: $ => seq(kw('ChDir'), field('path', $.expression), $._terminator),
    mkdir_statement: $ => seq(kw('MkDir'), field('path', $.expression), $._terminator),
    rmdir_statement: $ => seq(kw('RmDir'), field('path', $.expression), $._terminator),
    filecopy_statement: $ => seq(kw('FileCopy'), field('source', $.expression), ',', field('destination', $.expression), $._terminator),
    reset_statement: $ => prec(2, seq(kw('Reset'), $._terminator)),
