test/corpus/statements.txt
================================================================================
Dim statement
================================================================================

Sub Main()
    Dim x As Integer
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (dim_statement
            (variable_declarator
              name: (identifier)
              type: (type_expression))))))))

================================================================================
Const statement in block
================================================================================

Sub Main()
    Const MyVar = 459
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (const_statement
            (const_declarator
              name: (identifier)
              value: (expression
                (literal
                  (integer_literal))))))))))

================================================================================
Set statement
================================================================================

Sub Main()
    Set obj = New MyClass
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (set_statement
            target: (identifier)
            value: (expression
              (new_expression
                type: (identifier)))))))))

================================================================================
Explicit Let statement
================================================================================

Sub Main()
    Let x = 42
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (let_statement
            target: (identifier)
            value: (expression
              (literal
                (integer_literal)))))))))

================================================================================
Call statement with Call keyword
================================================================================

Sub Main()
    Call MsgBox("Hello")
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (call_statement
            call: (expression
              (index_expression
                object: (expression
                  (identifier))
                (argument
                  value: (expression
                    (literal
                      (string_literal))))))))))))

================================================================================
ReDim statement
================================================================================

Sub Main()
    ReDim Preserve arr(10)
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (redim_statement
            (redim_declarator
              name: (identifier)
              dimensions: (subscripts
                (subscript
                  (expression
                    (literal
                      (integer_literal))))))))))))

================================================================================
Multi-line If statement
================================================================================

Sub Main()
    If x > 0 Then
        y = 1
    End If
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (if_statement
            (block_if_statement
              condition: (expression
                (binary_expression
                  left: (expression
                    (identifier))
                  right: (expression
                    (literal
                      (integer_literal)))))
              consequence: (block
                (statement
                  (assignment_statement
                    target: (identifier)
                    value: (expression
                      (literal
                        (integer_literal)))))))))))))

================================================================================
If Else If statement
================================================================================

Sub Main()
    If x > 0 Then
        y = 1
    ElseIf x < 0 Then
        y = -1
    Else
        y = 0
    End If
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (if_statement
            (block_if_statement
              condition: (expression
                (binary_expression
                  left: (expression
                    (identifier))
                  right: (expression
                    (literal
                      (integer_literal)))))
              consequence: (block
                (statement
                  (assignment_statement
                    target: (identifier)
                    value: (expression
                      (literal
                        (integer_literal))))))
              (elseif_clause
                condition: (expression
                  (binary_expression
                    left: (expression
                      (identifier))
                    right: (expression
                      (literal
                        (integer_literal)))))
                body: (block
                  (statement
                    (assignment_statement
                      target: (identifier)
                      value: (expression
                        (unary_expression
                          operand: (expression
                            (literal
                              (integer_literal)))))))))
              (else_clause
                body: (block
                  (statement
                    (assignment_statement
                      target: (identifier)
                      value: (expression
                        (literal
                          (integer_literal))))))))))))))

================================================================================
Select Case statement
================================================================================

Sub Main()
    Select Case x
        Case 1
            y = 1
        Case Else
            y = 0
    End Select
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (select_case_statement
            value: (expression
              (identifier))
            (case_clause
              (case_condition
                (expression
                  (literal
                    (integer_literal))))
              body: (block
                (statement
                  (assignment_statement
                    target: (identifier)
                    value: (expression
                      (literal
                        (integer_literal)))))))
            (case_else_clause
              body: (block
                (statement
                  (assignment_statement
                    target: (identifier)
                    value: (expression
                      (literal
                        (integer_literal)))))))))))))

================================================================================
For Next statement
================================================================================

Sub Main()
    For I = 1 To 3
        Beep
    Next I
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (for_next_statement
            variable: (identifier)
            from: (expression
              (literal
                (integer_literal)))
            to: (expression
              (literal
                (integer_literal)))
            body: (block
              (statement
                (beep_statement)))
            next_variable: (identifier)))))))

================================================================================
While Wend statement
================================================================================

Sub Main()
    While x < 10
        x = x + 1
    Wend
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (while_statement
            condition: (expression
              (binary_expression
                left: (expression
                  (identifier))
                right: (expression
                  (literal
                    (integer_literal)))))
            body: (block
              (statement
                (assignment_statement
                  target: (identifier)
                  value: (expression
                    (binary_expression
                      left: (expression
                        (identifier))
                      right: (expression
                        (literal
                          (integer_literal))))))))))))))

================================================================================
Do While Loop statement
================================================================================

Sub Main()
    Do While x < 10
        x = x + 1
    Loop
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (do_loop_statement
            condition: (expression
              (binary_expression
                left: (expression
                  (identifier))
                right: (expression
                  (literal
                    (integer_literal)))))
            body: (block
              (statement
                (assignment_statement
                  target: (identifier)
                  value: (expression
                    (binary_expression
                      left: (expression
                        (identifier))
                      right: (expression
                        (literal
                          (integer_literal))))))))))))))

================================================================================
Infinite Do Loop statement
================================================================================

Sub Main()
    Do
        x = x + 1
    Loop
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (do_loop_statement
            body: (block
              (statement
                (assignment_statement
                  target: (identifier)
                  value: (expression
                    (binary_expression
                      left: (expression
                        (identifier))
                      right: (expression
                        (literal
                          (integer_literal))))))))))))))

================================================================================
Do Loop Until statement
================================================================================

Sub Main()
    Do
        x = x + 1
    Loop Until x > 10
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (do_loop_statement
            body: (block
              (statement
                (assignment_statement
                  target: (identifier)
                  value: (expression
                    (binary_expression
                      left: (expression
                        (identifier))
                      right: (expression
                        (literal
                          (integer_literal))))))))
            condition: (expression
              (binary_expression
                left: (expression
                  (identifier))
                right: (expression
                  (literal
                    (integer_literal)))))))))))

================================================================================
Inline If statement
================================================================================

Sub Main()
    If x > 0 Then y = 1
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (if_statement
            (inline_if_statement
              condition: (expression
                (binary_expression
                  left: (expression
                    (identifier))
                  right: (expression
                    (literal
                      (integer_literal)))))
              consequence: (inline_statement
                target: (identifier)
                value: (expression
                  (literal
                    (integer_literal)))))))))))

================================================================================
For Each statement
================================================================================

Sub Main()
    For Each item In myCollection
        Beep
    Next
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (for_each_statement
            variable: (identifier)
            collection: (expression
              (identifier))
            body: (block
              (statement
                (beep_statement)))))))))

================================================================================
With statement
================================================================================

Sub Main()
    With Text1
        Text1.Text = "Hello"
    End With
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (with_statement
            object: (expression
              (identifier))
            body: (block
              (statement
                (call_statement
                  call: (identifier)
                  arguments: (argument_list_no_parens
                    (argument
                      value: (expression
                        (binary_expression
                          left: (expression
                            (with_member_access_expression
                              name: (identifier)))
                          right: (expression
                            (literal
                              (string_literal))))))))))))))))

================================================================================
GoTo and label
================================================================================

Sub Main()
    GoTo LastLine
LastLine:
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (goto_statement
            label: (identifier)))
        (statement
          (label_statement
            name: (identifier)))))))

================================================================================
GoSub and Return
================================================================================

Sub Main()
    GoSub MyRoutine
    Exit Sub
MyRoutine:
    Beep
    Return
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (gosub_statement
            label: (identifier)))
        (statement
          (exit_statement))
        (statement
          (label_statement
            name: (identifier)))
        (statement
          (beep_statement))
        (statement
          (return_statement))))))

================================================================================
On Error GoTo
================================================================================

Sub Main()
    On Error GoTo ErrHandler
    Exit Sub
ErrHandler:
    Resume Next
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (on_error_statement
            label: (identifier)))
        (statement
          (exit_statement))
        (statement
          (label_statement
            name: (identifier)))
        (statement
          (resume_statement))))))

================================================================================
On Error Resume Next
================================================================================

Sub Main()
    On Error Resume Next
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (on_error_resume_next_statement))))))

================================================================================
On GoTo
================================================================================

Sub Main()
    On x GoTo Line1, Line2
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (on_goto_statement
            (expression
              (identifier))
            (identifier)
            (identifier)))))))

================================================================================
Open statement
================================================================================

Sub Main()
    Open "TESTFILE" For Input As #1
    Close #1
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (open_statement
            (expression
              (literal
                (string_literal)))
            file_number: (expression
              (file_number_expression
                (expression
                  (literal
                    (integer_literal)))))))
        (statement
          (close_statement
            (expression
              (literal
                (integer_literal)))))))))

================================================================================
Close statement (no args)
================================================================================

Sub Main()
    Close
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (close_statement))))))

================================================================================
Print statement
================================================================================

Sub Main()
    Print #1, "Hello"
    Print #1,
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (print_statement
            (output_list
              (output_item
                (expression
                  (file_number_expression
                    (expression
                      (literal
                        (integer_literal))))))
              (output_item
                (expression
                  (literal
                    (string_literal)))))))
        (statement
          (print_statement
            (output_list
              (output_item
                (expression
                  (file_number_expression
                    (expression
                      (literal
                        (integer_literal)))))))))))))

================================================================================
Write statement
================================================================================

Sub Main()
    Write #1, "Hello World", 234
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (write_statement
            (expression
              (literal
                (integer_literal)))
            (output_list
              (output_item
                (expression
                  (literal
                    (string_literal))))
              (output_item
                (expression
                  (literal
                    (integer_literal)))))))))))

================================================================================
Input statement
================================================================================

Sub Main()
    Input #1, MyString, MyNumber
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (input_statement
            (expression
              (literal
                (integer_literal)))
            variable: (identifier)
            variable: (identifier)))))))

================================================================================
Line Input statement
================================================================================

Sub Main()
    Line Input #1, TextLine
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (line_input_statement
            (expression
              (literal
                (integer_literal)))
            variable: (identifier)))))))

================================================================================
Get statement
================================================================================

Sub Main()
    Get #1, Position, MyRecord
    Get #1, , MyRecord
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (get_statement
            (expression
              (file_number_expression
                (expression
                  (literal
                    (integer_literal)))))
            (expression
              (identifier))
            variable: (expression
              (identifier))))
        (statement
          (get_statement
            (expression
              (file_number_expression
                (expression
                  (literal
                    (integer_literal)))))
            variable: (expression
              (identifier))))))))

================================================================================
Put statement
================================================================================

Sub Main()
    Put #1, RecordNumber, MyRecord
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (put_statement
            (expression
              (file_number_expression
                (expression
                  (literal
                    (integer_literal)))))
            (expression
              (identifier))
            data: (expression
              (identifier))))))))

================================================================================
Seek statement
================================================================================

Sub Main()
    Seek #1, RecordNumber
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (seek_statement
            (expression
              (file_number_expression
                (expression
                  (literal
                    (integer_literal)))))
            position: (expression
              (identifier))))))))

================================================================================
Lock and Unlock statements
================================================================================

Sub Main()
    Lock #1, RecordNumber
    Unlock #1, RecordNumber
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (lock_statement
            (expression
              (literal
                (integer_literal)))
            (expression
              (identifier))))
        (statement
          (unlock_statement
            (expression
              (literal
                (integer_literal)))
            (expression
              (identifier))))))))

================================================================================
Date statement
================================================================================

Sub Main()
    Date = MyDate
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (date_statement
            value: (expression
              (identifier))))))))

================================================================================
Time statement
================================================================================

Sub Main()
    Time = MyTime
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (time_statement
            value: (expression
              (identifier))))))))

================================================================================
FileCopy statement
================================================================================

Sub Main()
    FileCopy SourceFile, DestinationFile
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (filecopy_statement
            source: (expression
              (identifier))
            destination: (expression
              (identifier))))))))

================================================================================
Kill statement
================================================================================

Sub Main()
    Kill "TestFile"
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (kill_statement
            path: (expression
              (literal
                (string_literal)))))))))

================================================================================
Name statement
================================================================================

Sub Main()
    Name OldName As NewName
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (name_statement
            old_path: (expression
              (identifier))
            new_path: (expression
              (identifier))))))))

================================================================================
ChDir statement
================================================================================

Sub Main()
    ChDir "MYDIR"
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (chdir_statement
            path: (expression
              (literal
                (string_literal)))))))))

================================================================================
MkDir statement
================================================================================

Sub Main()
    MkDir "MYDIR"
End Sub

--------------------------------------------------------------------------------

(source_file
  (module_body
    (sub_declaration
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (statement
          (mkdir_statement
            path: (expression
              (literal
                (string_literal)))))))))

================================================================================
RmDir statement
================================================================================

Sub Main()
    RmDir "MYDIR"
End Sub
